--- a/github-api-02/README.adoc
+++ b/github-api-02/README.adoc
@@ -17,6 +17,26 @@ Libraries used in this project:
  * link:https://github.com/bennidi/mbassador[MBassador].
  * link:https://github.com/google/guava[Google Guava].
 
+== Running
+
+Run the application by invoking
+
+    $ ./gradlew run
+
+== IDE Configuration
+
+Make sure to have annotation processing enabled in your IDE.
+
+[horizontal]
+NetBeans:: This setting is enabled by default. JARs with annotation processors
+will be automatically found in the classpath.
+IntelliJ:: You must enable "Annotation Processing" in the project preferences.
+JARs with annotation processors will be found in the classpath.
+Eclipse:: You must enable "Annotation Processing" in the project preferences.
+You also need to manually specify which JARs contain annotation processors,
+this would be the Lombok dependency. Alternatively there's an UI based installer
+for Lombok that solves this problem.
+
 == License
 
 All code found in this repository is licensed under GPL v3
