--- a/chat-01/README.adoc
+++ b/chat-01/README.adoc
@@ -1,5 +1,7 @@
 = Chat 01
 
+image:https://img.shields.io/badge/donations-Patreon-f96854.svg[link="https://www.patreon.com/user?u=6609318"]
+
 Simple JavaFX based chat application. Kryo and Kryonet are used as encoding
 and transport.
 
