--- a/chat-02/README.adoc
+++ b/chat-02/README.adoc
@@ -1,5 +1,7 @@
 = Chat 02
 
+image:https://img.shields.io/badge/donations-Patreon-f96854.svg[link="https://www.patreon.com/user?u=6609318"]
+
 Simple JavaFX based chat application. Protocol Buffers and gRPC are used as encoding
 and transport.
 
