--- a/github-api-02/README.adoc
+++ b/github-api-02/README.adoc
@@ -1,5 +1,7 @@
 = Example 02
 
+image:https://img.shields.io/badge/donations-Patreon-f96854.svg[link="https://www.patreon.com/user?u=6609318"]
+
 Simple JavaFX based application that can issue a REST call to GitHub's API.
 Relies on JDeferred to invoke network calls on a background thread.
 
