--- a/todo-02/README.adoc
+++ b/todo-02/README.adoc
@@ -1,5 +1,7 @@
 = Todo 02
 
+image:https://img.shields.io/badge/donations-Patreon-f96854.svg[link="https://www.patreon.com/user?u=6609318"]
+
 Simple web application that models a Todo app.
 Uses the JavaEE Servlet API.
 
