--- a/hello-pmvc/README.adoc
+++ b/hello-pmvc/README.adoc
@@ -7,9 +7,11 @@ in action.
 
 Libraries used in this project:
 
+ * link:https://github.com/aalmiray/bootstrapfx[BootstrapFX].
+ * link:https://github.com/aalmiray/ikonli[Ikonli].
+ * link:http://www.miglayout.com/[MigLayout].
  * link:https://github.com/google/guice[Google Guice].
  * link:https://github.com/xvik/guice-ext-annotations[guice-ext-annotations].
- * link:https://projectlombok.org/features/index.html[Lombok].
  * link:https://github.com/google/guava[Google Guava].
 
 == Running
@@ -17,20 +19,6 @@ Libraries used in this project:
 Run the application by invoking
 
     $ ./gradlew run
-
-== IDE Configuration
-
-Make sure to have annotation processing enabled in your IDE.
-
-[horizontal]
-NetBeans:: This setting is enabled by default. JARs with annotation processors
-will be automatically found in the classpath.
-IntelliJ:: You must enable "Annotation Processing" in the project preferences.
-JARs with annotation processors will be found in the classpath.
-Eclipse:: You must enable "Annotation Processing" in the project preferences.
-You also need to manually specify which JARs contain annotation processors,
-this would be the Lombok dependency. Alternatively there's an UI based installer
-for Lombok that solves this problem.
 
 == License
 
